add Tools section

--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
   </div>
   <div class="paragraph" id="tools">
     <h2>Tools</h2>
-    
-    <!-- insert tools info here -->
-    
+    <p>
+      For working on this assignment, our group used two main collaboration tools. For writing the report, we used Google Docs, 
+      where we could all contribute to the report content. We found this to be a good solution for making a shared document. 
+      For discussion and team meetings, we used Discord. Discord allows us to chat and message, so we could have group discussions 
+      while also filling out our document at the same time. </br></br>
+      The shared GitHub repository is useful however our changes only reflect how we migrated individual contributions to the profile section. 
+      Ella was responsible for more of the html as that was one of her strengths, however the rest of the group contributed more to 
+      other sections of the report - essentially, we allocated tasks and roles based on individual strengths, rather than trying to have each member do a little bit of every single section. 
+      This means that our commit repository’s activity log, while still somewhat representative, does not form an entirely comprehensive picture of our group contributions.</br></br>
+      The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2/blob/master/IIT%20A2">here</a>.
+    </p>
   <div>
   </body>
 </html>
