--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>VibeCheck</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="images/vibecheck.png">
   </head>
   <body>
   <div class="paragraph" id="header">
