corrected repo hyperlink

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Ella was responsible for more of the html as that was one of her strengths, however the rest of the group contributed more to 
       other sections of the report - essentially, we allocated tasks and roles based on individual strengths, rather than trying to have each member do a little bit of every single section. 
       This means that our commit repository’s activity log, while still somewhat representative, does not form an entirely comprehensive picture of our group contributions.</br></br>
-      The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2/blob/master/IIT%20A2">here</a>.
+      The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2">here</a>.
     </p>
   <div>
   </body>
