--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       some basic HTML, CSS and javascript with Codecademy, as well as an introductory R course during a previous degree. 
     </p>
     
+    <p>
+      I am Daniel (s3858822) and I live in Adelaide, South Australia. I lived in the UK for 3 years, spending 6 months on the 
+      Isle of Wight and the rest of the time in Liverpool. I love football (soccer) and I am lost without it at the moment. 
+      I am interested in the visual arts, pop culture, games, history and economics. Sometimes I think I am interested in too 
+      many things. I have a professional background in Printing and Graphic Arts and have seen the web take over the industry. 
+      I have needed to start to understand IT and start to code HTML, CSS, Google Ads and Flash, this has been highly enjoyable 
+      for me. So I chose this as the direction I want to go next professionally.
+    </p>
+    
   </div>
   <div class="paragraph" id="personality">
     <h2>Team Profile</h2>
