update personal profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <div class="sect" id="pInfo">
     <h2>Personal Information</h2>
     <div class="paragraph">
-      <p>The members of VibeCheck are Stephen Mccluskey, William Scott, Ella Watts and Daniel Zaknic.</p>
+      <p>
+        The members of VibeCheck are Stephen Mccluskey, William Scott, Ella Watts and Daniel Zaknic. 
+        We're Group 2 from Introduction to Information Technology, and this is our page for Assignment 2.</p>
     
     <!-- put your personal info paragraphs here -->
     
