rephrase in tools

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="paragraph">
       For working on this assignment, our group used two main collaboration tools. For writing the report, we used Google Docs, 
       where we could all contribute to the report content. We found this to be a good solution for making a shared document. 
-      For discussion and team meetings, we used Discord. Discord allows us to chat and message, so we could have group discussions 
+      For discussion and team meetings, we used Discord, which allows us to chat and message, so we could have group discussions 
       while also filling out our document at the same time. </br></br>
       The shared GitHub repository is useful however our changes only reflect how we migrated individual contributions to the profile section. 
       Ella was responsible for more of the html as that was one of her strengths, however the rest of the group contributed more to 
