--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
           We're Group 2 from Introduction to Information Technology, and this is our page for Assignment 2.</p>
 
       <!-- put your personal info paragraphs here -->
+        
+        <p>
+          I’m Stephen (s3855458) and I’ve lived in Australia since 2008 when I moved here with my family from South Africa. 
+          My main hobbies are in gaming and fitness as it’s fun and distracting/involving. 
+          I’m interested in IT as I wish to understand how the game developers use coding to produce the final outcome of a game, 
+          as one day I'd like to be able to produce my own games and programs capable of completing tasks. 
+          However currently I don't really have that much experience in coding besides python, visual basics and a little bit of Javascript. 
+          But intend to further my knowledge over the length of this and other courses.
+        </p>
+        
+        <p>
+          I’m William and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
+          surrounded by modern consumer electronics the modern internet and modern social media and the cultural shift that came about with 
+          all of these things hitting the mainstream, it was about 5 or 6 when I started building PCS mainly just so I could play video games 
+          but as I grew up the power of I.T really started to awe and terrify me, tales like a deep learning A.I 
+          that can tell what products you want before you want or single man-made program that after being fed the right data and variables 
+          was able to perfectly predict the winners on the track at the Hong Kong horse racers. when it comes to experiences well I’ve never 
+          had the opportunity to become formally trained until now therefore I am completely self-taught.
+        </p>
 
         <p>
           I’m Ella (s3851446), and I’ve lived in Brisbane, Queensland for most of my life. One of my hobbies is learning languages - 
