remove navbar add student no.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
       href="images/vibecheck.png">
   </head>
   <body>
-    <div class="navbar">
-      <a href="#pInfo">Personal Information</a>
-      <a href="#personality">Team Profile</a>
-      <a href="#jobs">Ideal Jobs</a>
-      <a href="#tools">Tools</a>
-    </div>
     <div id="header">
       <h1>VibeCheck</h1>
     </div>
@@ -37,7 +31,7 @@
         </p>
         
         <p>
-          I’m William and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
+          I’m William (s3851536) and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
           surrounded by modern consumer electronics the modern internet and modern social media and the cultural shift that came about with 
           all of these things hitting the mainstream, it was about 5 or 6 when I started building PCS mainly just so I could play video games 
           but as I grew up the power of I.T really started to awe and terrify me, tales like a deep learning A.I 
