add repo anchor to names

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- put your personal info paragraphs here -->
         
         <p>
-          I’m Stephen (s3855458) and I’ve lived in Australia since 2008 when I moved here with my family from South Africa. 
+          I’m <a href="https://stephen-mccluskey.github.io/Profile/">Stephen (s3855458)</a> and I’ve lived in Australia since 2008 when I moved here with my family from South Africa. 
           My main hobbies are in gaming and fitness as it’s fun and distracting/involving. 
           I’m interested in IT as I wish to understand how the game developers use coding to produce the final outcome of a game, 
           as one day I'd like to be able to produce my own games and programs capable of completing tasks. 
@@ -31,7 +31,7 @@
         </p>
         
         <p>
-          I’m William (s3851536) and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
+          I’m <a href="https://winikari.github.io/Assignment-1/">William (s3851536)</a> and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
           surrounded by modern consumer electronics the modern internet and modern social media and the cultural shift that came about with 
           all of these things hitting the mainstream, it was about 5 or 6 when I started building PCS mainly just so I could play video games 
           but as I grew up the power of I.T really started to awe and terrify me, tales like a deep learning A.I 
@@ -41,7 +41,7 @@
         </p>
 
         <p>
-          I’m Ella (s3851446), and I’ve lived in Brisbane, Queensland for most of my life. One of my hobbies is learning languages - 
+          I’m <a href="https://ellawatts-rmit.github.io/">Ella (s3851446)</a>, and I’ve lived in Brisbane, Queensland for most of my life. One of my hobbies is learning languages - 
           I have reached an intermediate level in French, and I am looking at learning Dutch next. 
           I am interested in IT because I enjoy problem solving and using logic-based thinking skills, but I am also attracted to the creativity 
           that is required in some IT roles. However, I have very little IT experience outside of this course - I have only done 
@@ -49,7 +49,7 @@
         </p>
 
         <p>
-          I am Daniel (s3858822) and I live in Adelaide, South Australia. I lived in the UK for 3 years, spending 6 months on the 
+          I am <a href="https://dzak77.github.io/Assignment1-DZ/">Daniel (s3858822)</a> and I live in Adelaide, South Australia. I lived in the UK for 3 years, spending 6 months on the 
           Isle of Wight and the rest of the time in Liverpool. I love football (soccer) and I am lost without it at the moment. 
           I am interested in the visual arts, pop culture, games, history and economics. Sometimes I think I am interested in too 
           many things. I have a professional background in Printing and Graphic Arts and have seen the web take over the industry. 
