add ideal jobs section

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <p>
           The members of VibeCheck are Stephen Mccluskey, William Scott, Ella Watts and Daniel Zaknic. 
           We're Group 2 from Introduction to Information Technology, and this is our page for Assignment 2.</p>
-
-      <!-- put your personal info paragraphs here -->
-        
         <p>
           I’m <a href="https://stephen-mccluskey.github.io/Profile/">Stephen (s3855458)</a> and I’ve lived in Australia since 2008 when I moved here with my family from South Africa. 
           My main hobbies are in gaming and fitness as it’s fun and distracting/involving. 
@@ -29,7 +26,6 @@
           However currently I don't really have that much experience in coding besides python, visual basics and a little bit of Javascript. 
           But intend to further my knowledge over the length of this and other courses.
         </p>
-        
         <p>
           I’m <a href="https://winikari.github.io/Assignment-1/">William (s3851536)</a> and I have always been interested in IT from a young age and due to the fact that I grew up in a generation that is
           surrounded by modern consumer electronics the modern internet and modern social media and the cultural shift that came about with 
@@ -39,7 +35,6 @@
           was able to perfectly predict the winners on the track at the Hong Kong horse racers. when it comes to experiences well I’ve never 
           had the opportunity to become formally trained until now therefore I am completely self-taught.
         </p>
-
         <p>
           I’m <a href="https://ellawatts-rmit.github.io/">Ella (s3851446)</a>, and I’ve lived in Brisbane, Queensland for most of my life. One of my hobbies is learning languages - 
           I have reached an intermediate level in French, and I am looking at learning Dutch next. 
@@ -47,7 +42,6 @@
           that is required in some IT roles. However, I have very little IT experience outside of this course - I have only done 
           some basic HTML, CSS and javascript with Codecademy, as well as an introductory R course during a previous degree. 
         </p>
-
         <p>
           I am <a href="https://dzak77.github.io/Assignment1-DZ/">Daniel (s3858822)</a> and I live in Adelaide, South Australia. I lived in the UK for 3 years, spending 6 months on the 
           Isle of Wight and the rest of the time in Liverpool. I love football (soccer) and I am lost without it at the moment. 
@@ -57,7 +51,6 @@
           for me. So I chose this as the direction I want to go next professionally.
         </p>
       </div>
-
     </div>
     <div class="sect" id="personality">
       <h2>Team Profile</h2>
@@ -80,11 +73,14 @@
     <div class="sect" id="jobs">
       <h2>Ideal Jobs</h2>
       <p class="paragraph">
-
-      <!-- insert ideal jobs info here -->
-
+        When it comes to the ideal jobs of each person there are very few commonalities and the ones that there are not very interesting - mainly that we all focus on a form of development, 
+        whether it be for end-user experience, company security or scientific application. The interesting part - the difference, as hinted at in that sentence - is the different 
+        organisations we wish to work for and who we wish our products to be for; from consumer oriented to academically oriented, case in point.</br></br>
+        Ella and Daniel are very interested in the development and maintenance of end user design and interface managing code that runs the user-facing side of the sites and show desire 
+        to work in a more client and customer dictated role.</br></br>
+        William wishes to work in a more academic role far away from the demands and requests of clients and end users wishing to focus on creative invention.</br></br>
+        Stephen sits in the middle of the paradigm with the wish to work with clients with the relative freedom and direction in how the solution is created to avoid tiresome or monotonous work.
       </p>
-
     </div>
     <div class="sect" id="tools">
       <h2>Tools</h2>
