add content div

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="header">
       <h1>VibeCheck</h1>
     </div>
+    <div class="content">
     <div class="sect" id="pInfo">
       <h2>Personal Information</h2>
       <div class="paragraph">
@@ -96,5 +97,6 @@
         The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2">here</a>.
       </p>
     <div>
+    </div>
   </body>
 </html>
