--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="content">
     <div class="sect" id="pInfo">
-      <h2>Personal Information</h2>
+      <h2 class="tophead">Personal Information</h2>
       <div class="paragraph">
         <p>
           The members of VibeCheck are Stephen Mccluskey, William Scott, Ella Watts and Daniel Zaknic. 
