--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -3,7 +3,7 @@
   <head>
     <title>IT Report</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" 
       type="image/png" 
       href="images/vibecheck.png">
