--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" 
       type="image/png" 
-      href="images/vibecheck.png">
+      href="../images/vibecheck.png">
   </head>
   <body>
     <div class="navbar">
