add navbar links

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="navbar">
-    
+      <a href="../index.html">Home</a>
+      <a href="IT-report.html">IT Report</a>
     </div>
     <div class="sect">
       <h2>Content</h2>
