--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div id="header">
       <h1>VibeCheck</h1>
     </div>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="html/IT-report.html">IT Report</a>
+    </div>
     <div class="content">
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
