--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <div id="header">
       <h1>VibeCheck</h1>
     </div>
-    <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="html/IT-report.html">IT Report</a>
-    </div>
     <div class="content">
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
@@ -100,7 +96,142 @@
         This means that our commit repository’s activity log, while still somewhat representative, does not form an entirely comprehensive picture of our group contributions.</br></br>
         The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2">here</a>.
       </p>
-    <div>
     </div>
+    <div>
+      <h2>IT Report - Industry Data</h2>
+      <h3>What are the Job Titles for your group's ideal jobs? How do each of these rank in terms of demand from employers?
+      </h3>
+      <p>
+      </p>
+      </h3>Set of Skills required for the applicable job titles</h3>
+      <p>
+      </p>
+      <h3>Do These results (skill requirements/ranking) affect your job choice?</h3>
+      <p>
+      </p>
+      <h3></h3>
+      <p>
+      </p>
+    </div>
+    <div>
+      <h2>IT Work</h2>
+    </div>
+    <div>
+      <h2>IT Technologies</h2>
+      <h2>Machine Learning</h2>
+      <h3>What does it do?</h3>
+      <p>
+        In terms of accepted definitions, Machine Learning is defined as the ability for machines to automatically improve through
+        the experience of the task it was designed for, ultimately it is a form of artificial intelligence. Machine learning isn't
+        a new term within the IT industry, it has been worked on and referenced since the early 1950’s when inventors attempted to
+        produce machines such as the Perceptron (which is one of the first machines capable of learning), a machine designed to
+        model how the human brain processes visual data, and was capable of identifying objects. </br></br>
+        And while machine learning has come a long way since it’s initial implementation through ANN’s (Artificial Neural Networks), there hasn't been many advancements
+        to it since the 2010's introduced a more wider use of deep learning. Due to the fact that IT professionals discovered a way 
+        to more easily train those Deep Neural Networks which relied on the deep learning algorithm. However, in recent years an
+        application of machine learning has been expanded, with GAN (Generative Adversarial Networks) tech being updated and 
+        modernised to a point in which the neural networks can be fed a larger sample size of data and information compared to its
+        predecessors, this is also known ironically as BigGAN. </br></br>
+        Currently, Machine Learning is used in a vast majority of the professional fields around the world, ranging from medical all the way to advertisement and media, with its current objective
+        to inter/extrapolate information about consumers or events (basically predicting) pertaining to the data it is fed depending
+        on the information provided. For example, ANN’s within banks can allow bankers to monitor and assist in providing a more 
+        tailored assistance to loans and savings options, or in terms of media, a more direct and personalised advertorial within an
+        online shopping environment, meaning that users would see the items they might be more interested in… again providing a more
+        tailored and custom experience. But that isn't all machine learning can do, and those examples provided above only detail a 
+        small section of its involvement within businesses today, and an even smaller aspect of its roles within societies in future.
+        Besides the obvious improvements to performance and outputs by the ANN due to an increase in computer specs and the amount of
+        input data accumulated/ received over the years of it running. One of its potential roles within the not so distant future 
+        includes the automation of certain aspect of our lives and careers, with ANN’s possibly becoming more useful in things like
+        automated item ordering for stores based on weekly sales (Coles currently uses a version of this which is being taught how to
+        order certain item for areas such as the Deli). Or even in the far future, RPA (Robotic Process Automation) using machine 
+        learning, which is the automation of basic jobs like librarians and clerks using artificial intelligence trained on the inputs
+        of human behaviour during certain instances (e.g. scanning items, packaging items, putting the correct series of button inputs
+        based on a specific task, etc). The automation of tasks described earlier could be possible within the next few years due to 
+        the fast expansion and growth of automated machine learning, which means that the input data doesn't have to be added through
+        human intervention, and outputs/ solutions don't have to be drawn through human intervention, but can be concluded by the ANN
+        itself. Allowing human resources to be focused on more important areas. Even now the A. ANN is and can be used to some degree
+        as technology currently exists, such as:
+ Cloud AutoML - A set of cloud based machine learning products which allows the independent training of ANNs to happen, even if the user
+        doesn't have all that much experience.
+ATM (Auto Tune Models) - Multi-data system for automated machine learning.
+      </p>
+      <h3>What is it's likely Impact?</h3>
+      <p>
+        As I briefly touched upon with the ‘What does it Do?’ section of this technology, i stated that in future these automated machine
+        learning ANN’s would be able to take over certain industrial jobs though RPA (Robotic Process Automation). Which to summarise is
+        the process of an ANN completing predictions and using/ obtaining/interpreting inputs without the need for human input (but the
+        machine MUST be somewhat configured prior with test data). </br></br>
+        Eventually when a system such as this finally becomes more proficient and powerful (processing power wise), some jobs that require
+        human resources can be taken over/ automated. Some jobs like this includes but are not limited to Cashiers, Librarians, Warehouse
+        and Manufacturing jobs, etc. This automation, although a great step toward the future can create a lot of social complications as
+        humans become redundant in certain aspects of jobs meaning that unemployment would become a big problem within future years as 
+        there would be a smaller job pool in which people could apply and work.
+      </p>
+      <h3>How will this affect you?</h3>
+      <p>
+        If automated machine learning were to become the norm, and take over some commercial work effective immediately, it would
+        render my job as a Coles employee useless and I'd receive no compensation as I'm a casual. However besides me, my immediate family
+        would only be affected by the loss of a discount, and all of society would have to become accustomed to the new ways in which they 
+        may have to purchase their goods.</br></br>
+        However since that WON'T happen for at least another 5 - 10 years realistically, it provides employees specially the opportunity to
+        find work, or adapt their position within the business allowing them to remain employed even when automation seizes their position.
+        This time frame also allows the consumers, shareholders/ investors, and most importantly the company itself the necessary time to
+        allow the automation to become fully incorporated seamlessly (the business), and for consumers the ability to adapt to the new way in
+        which they may need to become accustomed to when purchasing dometic goods.
+      </p>
+    </div>
+    <div>
+      <h2>Cyber Security</h2>
+      <h3>What does it do?</h3>
+      <p>
+        Cyber Security is often described or referred to as [1] the body of technologies, processes, and practices designed to protect networks,
+        devices, programs, and data from attack, damage, or unauthorized access. Cyber security (CS) has always been a major aspect of IT 
+        innovation, however its relevance within society nowadays has grown exponentially, as more and more people have moved to the web with
+        their personal information at a risk to intrusion and corruption by those with malicious intent. While this area of information
+        technology is fast developing, the transformation of ideas on how to best protect personal and private info has changed significantly.
+        With the state of the art tech from 2018 being heavily influenced by ideas such as a better [2] ‘End to End Encryption’ of personal
+        info when exchanging info, in which both users rely on primary keys (password for password locked information) to access the encrypted 
+        information. Or something such as [2] ‘Single Use Softwares’, which is used in-order to protect purchasable, intellectual property 
+        that in the past would be pirated. Which to briefly sum up involves the use of quantum computers to build single use software tools 
+        from light particles, in the attempt to prevent intellectual property such as code from being pirated, or a malicious attack. Whilst
+        in modern times, the latest and greatest within tech development involves the use of AI and the automation of data collection. This new
+        era of automation, especially within the realm of CS could potentially redesign the way info is stored, shared and protected, as 
+        processes won't be controlled with the potential of human error. Rather controlled with precision based on the events the AI is taught
+        to protect against. Some fantastic examples of this include the [3] use of AI’s in the defence and attacking of threats against 
+        companies' internet processes. These AI can be taught to defend the information and user from things such as [4] phishing links, 
+        eavesdropping malware, harmful downloads with SQL injections, etc, protecting the user and their processes online by almost 
+        instantaneously protecting the companies/individuals systems once irregular action is taken. Another example involves the use of 
+        ANN and ML to not only complete certain tasks such as data collection faster, but free up the companies employees, reducing workload
+        on maintenance (still required but less involved as the ANN can be taught to suspend data collection when malicious malware is 
+        detected). In future, these automated processes can be refined to not only act based upon the tests data and actions it is coded to
+        protect against, but possibly be developed in such a way that it can adapt and learn in real time to produce a greater protection of
+        the companies/ organisations/ users sensitive information (so basically proper artificial intelligence which can learn new ways of
+        data protection based on the experience it has during its professional use).
+      </p>
+      </h3>What is it's likely impact?</h3>
+      </p>
+        If AI and ML becomes the forefront of CS within an online system, it WILL redefine the standards for which IT professionals and companies
+        need to meet inorder to be considered secure. As while AI and ML can be used to streamline processes for data collection and  become able
+        to shut down the potential for malicious intrusion by hackers, this access to a smarter, more capable AI system will lead to hackers 
+        producing AI and ANN’s of their own in pursuit of data stealing and hacking. HOWEVER, this is currently only a presumption, as tech like 
+        this will need time for development to become even remotely capable of completing the tasks it's needed for. But, if we pretend that tech
+        like this were to be implemented right now, tech like this would affect almost all large corporations and businesses, as the demand for 
+        CS technicians capable of maintaining the AI, but also finding new work for the employees tasked with the jobs that were monitored by 
+        the employees. This automation (if introduced right now or even implemented in future) could cause the possibility of mass job loss, as
+        employers will only need specialist roles such as technicians to maintain the AI and ANN used to process and secure the workplaces info,
+        but this can also be portrayed as businesses and corporation may call for the need of individuals in the marketing, once again creating 
+        new jobs. This kind of automation wouldn't be a cause for concern in terms of job and skill redundancy, rather a little push as to 
+        promote more creative skills (marketing) and technical skills when pursuing work within an IT profession (less people in certain aspects
+        of a job) or any profession at that.
+      </p>
+      <h3>How will this affect you?</h3>
+      <p>
+        Innovation such as the one mentioned above (automation of CS) while ground breaking in terms of its potential implications, won't really
+        affect anyone including my team and I who currently work within hospitality and customer service based occupations. However, in future 
+        its members such as Ella, Daniel and Stephen may need to develop technician based skills to assist IT companies in the protection and
+        servicing of the AI, and or be able to interpret the raw data accumulated from the ML algorithms in the collection of user, client,
+        etc data. As human resources within the areas of data protection and collection will no longer be considered paramount in the survival
+        of data attacks/theft, rather the servicing and protection of those AI will be considered the pinnacle of CS.
+      </p>
   </body>
 </html>
