--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <h1>VibeCheck</h1>
     </div>
     <div class="content">
+    <div class="navbar">
+      <a href="../index.html">Home</a>
+      <a href="IT-report.html">IT Report</a>
+    </div>
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
       <div class="paragraph">
