--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <div class="content">
     <div class="navbar">
-      <a href="../index.html">Home</a>
-      <a href="IT-report.html">IT Report</a>
+      <a href="index.html">Home</a>
+      <a href="html/IT-report.html">IT Report</a>
     </div>
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
