added my job choice things

--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
       </p>
       <h3>Do These results (skill requirements/ranking) affect your job choice?</h3>
       <p>
+        Stephen - While the skills required to seem extensive, and may require a lot of training and courses to perfect 
+        and grasp, especially in terms of the technical soft dev specific skills. It doesn't really change my mind on
+        programming as the option for me, due to the fact that although it is intensive and demanding, it’ll keep me 
+        occupied and busy, all the while providing me an in depth knowledge as to how IT systems work, and will evolve
+        in future. </br></br>
+        Daniel - 
+        </br></br>
+        Ella -
       </p>
       <h3></h3>
       <p>
