--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -15,7 +15,7 @@
         <a href="IT-report.html">IT Report</a>
       </div>
       <div>
-        <h2>IT Report - Industry Data</h2>
+        <h2>Industry Data</h2>
         <h3>What are the Job Titles for your group's ideal jobs? How do each of these rank in terms of demand from employers?</h3>
         <div class="paragraph">
           <p>
