--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -135,7 +135,7 @@
             the companies/ organisations/ users sensitive information (so basically proper artificial intelligence which can learn new ways of
             data protection based on the experience it has during its professional use).
           </p>
-          </h3>What is it's likely impact?</h3>
+          <h3>What is it's likely impact?</h3>
           </p>
             If AI and ML becomes the forefront of CS within an online system, it WILL redefine the standards for which IT professionals and companies
             need to meet inorder to be considered secure. As while AI and ML can be used to streamline processes for data collection and  become able
