--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -20,7 +20,7 @@
         <div class="paragraph">
           <p>
           </p>
-        </h3>Set of skills required for the applicable job titles</h3>
+        <h3>Set of skills required for the applicable job titles</h3>
           <p>
           </p>
         <h3>Do these results (skill requirements/ranking) affect your job choice?</h3>
