add project navbar

--- a/html/project.html
+++ b/html/project.html
@@ -13,5 +13,6 @@
       <div class="navbar">
         <a href="../index.html">Home</a>
         <a href="IT-report.html">IT Report</a>
+        <a href="project.html">Project</a>
       </div>
   </body>
