add project navbar

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -13,6 +13,7 @@
       <div class="navbar">
         <a href="../index.html">Home</a>
         <a href="IT-report.html">IT Report</a>
+        <a href="project.html">Project</a>
       </div>
       <div>
         <h2 class="tophead">Industry Data</h2>
