add project navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="html/IT-report.html">IT Report</a>
+      <a href="html/project.html">Project</a>
     </div>
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
