add nobox class

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -45,7 +45,7 @@
       </div>
      <div>
         <h2>IT Technologies</h2>
-        <h2>Machine Learning</h2>
+        <h2 class="nobox">Machine Learning</h2>
         <div class="paragraph">
           <h3>What does it do?</h3>
           <p>
@@ -79,9 +79,9 @@
             human intervention, and outputs/ solutions don't have to be drawn through human intervention, but can be concluded by the ANN
             itself. Allowing human resources to be focused on more important areas. Even now the A. ANN is and can be used to some degree
             as technology currently exists, such as:
-     Cloud AutoML - A set of cloud based machine learning products which allows the independent training of ANNs to happen, even if the user
+             Cloud AutoML - A set of cloud based machine learning products which allows the independent training of ANNs to happen, even if the user
             doesn't have all that much experience.
-    ATM (Auto Tune Models) - Multi-data system for automated machine learning.
+            ATM (Auto Tune Models) - Multi-data system for automated machine learning.
           </p>
           <h3>What is it's likely Impact?</h3>
           <p>
@@ -109,7 +109,7 @@
           </p>
         </div>
         <div>
-          <h2>Cyber Security</h2>
+          <h2 class="nobox">Cyber Security</h2>
           <h3>What does it do?</h3>
           <p>
             Cyber Security is often described or referred to as [1] the body of technologies, processes, and practices designed to protect networks,
