--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -45,7 +45,7 @@
       </div>
      <div>
         <h2>IT Technologies</h2>
-        <h2 class="nobox">Machine Learning</h2>
+        <h2 class="nobox tophead">Machine Learning</h2>
         <div class="paragraph">
           <h3>What does it do?</h3>
           <p>
