--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -15,6 +15,7 @@
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
       </div>
+      <h1 class="small">VibeCheck</h1>
       <div>
         <h2 class="tophead">Industry Data</h2>
         <h3>What are the Job Titles for your group's ideal jobs? How do each of these rank in terms of demand from employers?</h3>
