--- a/html/project.html
+++ b/html/project.html
@@ -9,6 +9,7 @@
       href="../images/vibecheck.png">
   </head>
   <body>
+    <h1 class="small">VibeCheck</h1>
     <div class="content">
       <div class="navbar">
         <a href="../index.html">Home</a>
