add linkedin malcolm

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -41,7 +41,8 @@
       <div>
         <h2>IT Work</h2>
         <div class="paragraph">
-          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</br></br></p>
+          <p>Our group interviewed <a href="https://www.linkedin.com/in/malcolm-watts-12208214/?originalSubdomain=au">Malcolm Watts</a>, 
+            who currently works in ICT and as an implementation partner.</br></br></p>
           <h3>What kind of work is done by the IT professional?</h3>
           <p>
             For most of his clients, Malcolm serves as their IT department, helping with any day-to-day troubleshooting, 
