--- a/html/project.html
+++ b/html/project.html
@@ -15,6 +15,7 @@
         <a href="../index.html">Home</a>
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
+        <a href="pdf.html">Report PDF</a>
       </div>
       <h2 class="tophead">Project</h2>
       <p>
